<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JBlog</string>
    <string name="action_settings">设置</string>
    <string name="login_account_hint">邮箱或手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_help">帮助</string>
    <string name="register_cancel">取消</string>
    <string name="register_phone">手机号</string>
    <string name="home">主页</string>
    <string name="user">我</string>
    <string name="message">消息</string>
    <string name="discover">发现</string>
    <string name="myfile">我的收藏</string>
    <string name="mypicture">我的相册</string>
    <string name="myhome">我的主页</string>
</resources>
