<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 显示帐号、密码及登录的线性布局 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="200dp"
        android:background="@color/teal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/loginfragment_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_account_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/loginfragment_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/loginfragment_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login" />
    </LinearLayout>

    <Button
        android:id="@+id/loginfragment_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_help" />

    <Button
        android:id="@+id/loginfragment_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register" />

</LinearLayout>