<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/login_cancel"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/return_btn"
            android:text="返回"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登录"
            android:textSize="20dp" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundedrectangle_btn"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" >
    </View>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp" >

        <com.weibo.adapter.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <!-- 显示帐号、密码及登录的线性布局 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/publish_content_edt"
            android:hint="@string/login_account_hint"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/publish_content_edt"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_login"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedrectangle_btn"
            android:text="@string/login_login" />

        <Button
            android:id="@+id/login_help"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/return_btn"
            android:text="@string/login_help" />
    </LinearLayout>

</LinearLayout>